--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simplify your bill splitting with FairFare. Create an event
+      and invite your friends to join."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.svg" />
     <!--
